Fix alignments of buttons and more-info page

--- a/css/styles.css
+++ b/css/styles.css
@@ -104,7 +104,6 @@ section {
 img {
     width: 150px;
     height: auto;
-    /* background-color: var(--grey); */
     border: 3px solid var(--blue);
     border-radius: 50%;
 }
@@ -132,7 +131,6 @@ h1 {
 
 h2 {
     padding-bottom: 5px;
-    /* match leo's project title font */
     font-family: var(--default-font);
     font-size: 12px;
     font-weight: bold;
@@ -185,6 +183,15 @@ button:hover {
 }
 .learn-more:hover {
     color: var(--blue);
+}
+
+/* more-info */
+.content-center {
+    width: 100%;
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
 }
 
 /* FOOTER --------------------------------------------- */
